--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=AgricodeApp
 
 
-
 # JWT Configuration
-jwt.secret=test_dev_key_123456789
-
+jwt.secret=K6SgREO3tPI/Oi0qSOBr0VZLMpynPgCBAn2Ev/HLV84=
 
 # Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/agricode_quest
+spring.datasource.url=jdbc:mysql://host.docker.internal:3307/agricode_quest
 spring.datasource.username=root
 spring.datasource.password=@m@n11501
 
